JEFF-18 Fix past reading spacing from footer

--- a/src/components/Reading/styles.css
+++ b/src/components/Reading/styles.css
@@ -58,3 +58,6 @@
     width: 3.7em;
     padding-top: 2.3em;
 }
+.past-reading-container {
+    padding-bottom: 3.7em;
+}
